codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
assertion_line: 145
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---


⚠ MCP client for `alpha` failed to start: handshake failed
⚠ MCP startup incomplete (failed: alpha). Press `r` or run `/mcp retry failed`
  to retry. Run `/mcp` for details.


› Ask xcodex to do anything

  ? for shortcuts · gpt-5.3-codex                                                                    100% context left
